# policyops-copilot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py
backend/app/application/: agent.py  services.py
backend/app/core/: config.py  logging.py  security.py
backend/app/domain/: models.py  ports.py
backend/app/infrastructure/auth/: auth.py
backend/app/infrastructure/db/: models.py
backend/app/infrastructure/llm/: azure_openai_llm.py  factory.py  mock_llm.py
backend/app/infrastructure/observability/: tracing.py
backend/app/infrastructure/retrieval/: azure_search_retriever.py  factory.py  faiss_retriever.py
backend/app/interfaces/api/middleware/: rate_limit.py
backend/app/interfaces/api/routes/: approvals.py  chat.py  ingest.py  procedure.py
backend/langgraph/: graph.py
backend/scripts/: ingest.py
backend/tests/: test_eval_harness.py
data/sample_policies/: access_management_sop.md  data_retention_policy.md  expense_reimbursement_policy.md  information_security_policy.md  travel_policy.md
docs/: architecture.md  runbook.md  threat_model.md  well_architected.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/procedure/: page.tsx
frontend/lib/: api.ts
infra/terraform/: main.tf  outputs.tf  variables.tf
(+2 files in other folders)
